--- a/ocher/meson.build
+++ b/ocher/meson.build
@@ -144,33 +144,6 @@ configure_file(input : 'meson_config.h.in',
 # TODO  How best to make linux kernel headers available?  KoboLabs has them in their repo.
 add_project_arguments(['-include', 'ocher_config.h', '-I../ocher/linux-2.6.35.3/include'], language : 'cpp')
 
-compiler = meson.get_compiler('cpp')
-warning_flags = [
-    '-Wall',
-    '-Wextra',
-    #'-Wcast-align',                # TODO
-    #'-Wcast-align=strict',         # TODO
-    #'-Wold-style-cast',            # too many
-    #'-Wshadow',                    # libev, json too noisy
-    #'-Wuseless-cast',              # libev, json too noisy
-    #'-Wzero-as-null-pointer-constant', # json, Delegate too noisy
-    '-Wcast-qual',
-    '-Wduplicated-cond',
-    '-Werror=suggest-override',
-    '-Wformat=2',
-    '-Wframe-larger-than=16384',
-    '-Wlogical-op',
-    '-Wno-c++17-compat-mangling',   # libev too noisy
-    '-Wno-multichar',
-    '-Wno-unused-parameter',
-    '-Wnull-dereference',
-]
-foreach extra_arg : warning_flags
-    if compiler.has_argument(extra_arg)
-        add_project_arguments([extra_arg], language: 'cpp')
-    endif
-endforeach
-
 ocherbook_inc = include_directories('.')
 ocherbook = static_library('ocherbook', ocher_sources,
     dependencies : [
@@ -190,8 +163,13 @@ ocherbook_dep = declare_dependency(
     link_with: ocherbook,
     dependencies : [
         thread_dep,
+        zlib_dep,
         Signals_dep,
+        json_dep,
         libev_dep,
+        freetype_dep,
+        sdl_dep,
+        mxml_dep,
     ],
 )
 
