--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ matrix:
     - os: linux
       dist: trusty
 
-install:
-  - pip3 install meson
+before_install:
+  - sudo apt-get -y install python3 python3-pip
+  - pip3 install --user meson==0.43.0
 
 script:
   - meson builddir
