Add missing stdex.h file

--- a/ocher/CMakeLists.txt
+++ b/ocher/CMakeLists.txt
@@ -47,6 +47,7 @@ list(APPEND LIB_SOURCES
     util/StrUtil.cpp
     util/StrUtil.h
     util/intrinsics.h
+    util/stdex.h
     ux/Activity.cpp
     ux/Activity.h
     ux/Controller.cpp
