--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,12 @@ language: cpp
 compiler:
   - gcc
   - clang
-
-matrix:
-  include:
-    - os: linux
-      dist: trusty
+os: linux
+dist: xenial
 
 before_install:
-  - sudo apt-get -y install python3 python3-pip
-  - pip3 install --user meson==0.43.0
+  - sudo apt-get -y install python3 python3-setuptools python3-pip ninja-build
+  - pip3 install --user meson==0.50.0
 
 script:
   - meson builddir
