Work on the system menu
- PGM and RLE bitmap parsing
- Start of Menu widget

--- a/ocher/CMakeLists.txt
+++ b/ocher/CMakeLists.txt
@@ -87,6 +87,7 @@ endif()
 if(UX_FB)
     list(APPEND LIB_SOURCES
         ux/fb/BatteryIcon.cpp
+        ux/fb/bitmap.cpp
         ux/fb/BootActivityFb.cpp
         ux/fb/ClockIcon.cpp
         ux/fb/FontEngine.cpp
@@ -98,7 +99,6 @@ if(UX_FB)
         ux/fb/NavBar.cpp
         ux/fb/ReadActivityFb.cpp
         ux/fb/RendererFb.cpp
-        ux/fb/RleBitmap.cpp
         ux/fb/SettingsActivityFb.cpp
         ux/fb/SleepActivityFb.cpp
         ux/fb/SyncActivityFb.cpp
