--- a/ocher/meson.build
+++ b/ocher/meson.build
@@ -101,9 +101,9 @@ if conf_data.get('UX_FB', false)
         'ux/fb/bitmap.cpp',
         'ux/fb/BootActivityFb.cpp',
         'ux/fb/ClockIcon.cpp',
+        'ux/fb/fontcontext.cpp',
         'ux/fb/FontEngine.cpp',
         'ux/fb/FrameBuffer.cpp',
-        'ux/fb/FreeType.cpp',
         'ux/fb/HomeActivityFb.cpp',
         'ux/fb/JPEG.cpp',
         'ux/fb/LibraryActivityFb.cpp',
