Clear clock timer in destructor; split out time utils

--- a/ocher/CMakeLists.txt
+++ b/ocher/CMakeLists.txt
@@ -46,6 +46,8 @@ list(APPEND LIB_SOURCES
     util/StrUtil.h
     util/intrinsics.h
     util/stdex.h
+    util/time.cpp
+    util/time.h
     ux/Activity.cpp
     ux/Activity.h
     ux/Controller.cpp
